# paperspace

./: Cargo.toml  README.md  build.rs  package-lock.json  test.db
frontend/: package-lock.json  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/session/: +page.svelte  Decrementer.svelte  Incrementer.svelte  Resetter.svelte  stores.ts  websocket.ts
migrations/: 20231229155932_init.sql
src/: api.rs  app.rs  config.rs  db.rs  frontend.rs  main.rs  session.rs  state.rs
src/db/: queries.rs
src/session/: state.rs  websocket.rs
