[package]
name = "paperspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
chrono={version="0.4", features=["serde"]}
console-subscriber = "0.2.0"
include_dir = "0.7.3"
mime_guess = "2.0.4"
open = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.3", features = [ "runtime-tokio-native-tls", "migrate", "sqlite", "chrono"] } 
tokio = { version = "1.34", features = ["full", "tracing"] }
tower = {version = "0.4"}
tower-http = {version = "0.3", features = ["add-extension", "auth", "compression-gzip", "trace", "fs"]}
[profile.dev.package.sqlx-macros]
opt-level = 3 # Speed up sqlx checks.
