[package]
name = "paperspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.7.3", features=["ws", "macros", "tracing"]}
axum-extra = {version="0.9", features=["typed-header"]}
chrono={version="0.4", features=["serde"]}
console-subscriber = "0.2.0"
futures = "0.3.30"
futures-util = "0.3.30"
headers = "0.4.0"
include_dir = "0.7.3"
mime_guess = "2.0.4"
open = "5.0.1"
platform-dirs = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.3", features = [ "runtime-tokio-native-tls", "migrate", "sqlite", "chrono"] } 
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = "0.7.10"
toml = "0.8.8"
tower = {version = "0.4"}
tower-http = {version = "0.5", features = ["add-extension", "auth", "compression-gzip", "trace", "fs"]}
tracing-subscriber = {version = "0.3.18", features= ["env-filter"] }
uuid = {version="1.6.1", features=["v4"]}
